# xctools

./: .gitignore  AGENTS.md  Cargo.toml  MONOREPO.md  README.md  justfile
.github/workflows/: main.yml
.specify/memory/: constitution.md
TestXcodeApp/TestXcodeApp/: TestXcodeAppApp.swift
TestXcodeApp/TestXcodeAppUITests/: TestXcodeAppUITests.swift  TestXcodeAppUITestsLaunchTests.swift
crates/xcbuild_common/: Cargo.toml
crates/xcbuild_common/src/: lib.rs
crates/xctools-acknowledgements/: Cargo.toml
crates/xctools-acknowledgements/src/: lib.rs
crates/xctools-build/: Cargo.toml
crates/xctools-build/src/: lib.rs
crates/xctools-bump-version/: Cargo.toml
crates/xctools-bump-version/src/: lib.rs
crates/xctools-cli/: Cargo.toml
crates/xctools-cli/TestXcodeApp/TestXcodeApp.xcodeproj/: project.pbxproj
crates/xctools-cli/TestXcodeApp/TestXcodeApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
crates/xctools-cli/TestXcodeApp/TestXcodeAppTests/: TestXcodeAppTests.swift
crates/xctools-cli/src/: main.rs
crates/xctools-cli/tests/: integration_tests.rs
crates/xctools_acknowledgements/: Cargo.toml
crates/xctools_acknowledgements/src/: lib.rs
crates/xctools_archive/: Cargo.toml
crates/xctools_archive/src/: lib.rs
crates/xctools_build/: Cargo.toml
crates/xctools_build/src/: lib.rs
crates/xctools_bump_version/: Cargo.toml
crates/xctools_bump_version/src/: lib.rs
crates/xctools_cli/: Cargo.toml
crates/xctools_cli/TestXcodeApp/TestXcodeApp/: ContentView.swift
crates/xctools_cli/TestXcodeApp/TestXcodeApp.xcodeproj/: project.pbxproj
crates/xctools_cli/src/: main.rs
crates/xctools_cli/tests/: integration_tests.rs
crates/xctools_export_archive/: Cargo.toml
crates/xctools_export_archive/src/: lib.rs
crates/xctools_notarize/: Cargo.toml
crates/xctools_notarize/src/: lib.rs
crates/xctools_setup_signing/: Cargo.toml
crates/xctools_setup_signing/src/: lib.rs
crates/xctools_test/: Cargo.toml
crates/xctools_test/src/: lib.rs
crates/xctools_upload/: Cargo.toml
crates/xctools_upload/src/: lib.rs
src/: build.rs  bump_version.rs  main.rs
tests/: integration_tests.rs
