[workspace]
members = [
    "crates/xctools-acknowledgements",
    "crates/xctools-build",
    "crates/xctools-bump-version",
    "crates/xctools-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
semver = "1.0.26"
glob = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.8"
