[workspace]
members = [
    "crates/xctools_acknowledgements",
    "crates/xctools_build",
    "crates/xctools_bump_version",
    "crates/xctools_cli",
    "crates/xctools_test",
    "crates/xctools_archive",
    "crates/xctools_upload",
    "crates/xctools_export_archive",
    "crates/xctools_notarize",
    "crates/xctools_setup_signing",
    "crates/xcbuild_common",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
semver = "1.0.26"
glob = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.8"
