[package]
name = "xctools_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xctools"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
semver = { workspace = true }
xctools_build = { path = "../xctools_build" }
xctools_bump_version = { path = "../xctools_bump_version" }
xctools_acknowledgements = { path = "../xctools_acknowledgements" }
xctools_test = { path = "../xctools_test" }
xctools_archive = { path = "../xctools_archive" }
xctools_upload = { path = "../xctools_upload" }
xctools_export_archive = { path = "../xctools_export_archive" }
xcbuild_common = { path = "../xcbuild_common" }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
